--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Currency Calculator</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_conversion_list">Conversion List</string>
+    <string name="title_rate_calculator">Rate Calculator</string>
+    <string name="title_setting">Setting</string>
 </resources>
